remove the scrollbar on the table, fix rendering of pages back to dash

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -98,6 +98,7 @@ li:hover{
 
 /* MAIN CONTENT */
 .dashboard-container{
+    display: none;
     height: 80vh;   /*from min height: 570px*/
     width: 75%;
     position: absolute;
